--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/optimed
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3307/optimed
 spring.datasource.username=optimed
 spring.datasource.password=optimed
 
