add scriptService and 1st attempt with dispenseCOntroller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/optimed
+server.port=8081
+spring.application.name=fatima-madhi-optometrist
+spring.datasource.url=jdbc:mysql://localhost:3307/optimed
 spring.datasource.username=optimed
 spring.datasource.password=optimed
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
