--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3307/optimed
-spring.datasource.username=optimed
-spring.datasource.password=optimed
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql: true
