--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<version>7.0</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.17.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
